infrastructure/monitoring-stack/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "${env}-quotes-monitoring-ingress"
  annotations:
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.devops.com
    http:
      paths:
      - backend:
          service:
            name: "${env}-quotes-prometheus-kube-prometheus"
            port:
              number: 9090
        path: /
        pathType: Prefix
  - host: grafana.devops.com
    http:
      paths:
      - backend:
          service:
            name: "${env}-quotes-prometheus-grafana"
            port:
              number: 80
        path: /
        pathType: Prefix
